Updated Main Branch to 1.1.0

--- a/SJYouTubeIDParser Demo/SJYouTubeIDParser Demo/Base.lproj/MainMenu.xib
+++ b/SJYouTubeIDParser Demo/SJYouTubeIDParser Demo/Base.lproj/MainMenu.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="5056" systemVersion="13E28" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="5056" systemVersion="13E28" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="5056"/>
     </dependencies>
@@ -13,8 +13,16 @@
         <customObject id="-3" userLabel="Application"/>
         <customObject id="Voe-Tx-rLC" customClass="AppDelegate">
             <connections>
+                <outlet property="circularProgressIndicator" destination="m03-GL-62o" id="OQr-37-IzQ"/>
+                <outlet property="descriptionTextField" destination="8AD-ho-fA8" id="ba5-te-wx8"/>
+                <outlet property="ratingIndicator" destination="s2z-81-HWs" id="Sxl-Yb-8tC"/>
                 <outlet property="textField" destination="c2L-yR-K1n" id="NzL-KZ-NxZ"/>
+                <outlet property="thumbnailImageView" destination="gL0-Bj-GB4" id="4JA-sr-lrZ"/>
+                <outlet property="timeAgoTextField" destination="tEq-wV-CSB" id="Y6n-jj-51K"/>
+                <outlet property="uploaderTextField" destination="sTV-ss-9h5" id="PZM-A0-24F"/>
                 <outlet property="videoIDLabel" destination="7q3-m0-8iU" id="txb-kz-wcT"/>
+                <outlet property="videoTitleTextField" destination="lzx-t2-ww7" id="1dk-q4-b1Z"/>
+                <outlet property="viewCountTextField" destination="B8E-J6-8E4" id="hqI-u6-NMP"/>
                 <outlet property="window" destination="QvC-M9-y7g" id="gIp-Ho-8D9"/>
             </connections>
         </customObject>
@@ -671,14 +679,14 @@
         <window title="SJYouTubeIDParser Demo" allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" releasedWhenClosed="NO" animationBehavior="default" id="QvC-M9-y7g">
             <windowStyleMask key="styleMask" titled="YES" closable="YES" miniaturizable="YES"/>
             <windowPositionMask key="initialPositionMask" leftStrut="YES" rightStrut="YES" topStrut="YES" bottomStrut="YES"/>
-            <rect key="contentRect" x="335" y="390" width="480" height="132"/>
+            <rect key="contentRect" x="335" y="390" width="480" height="193"/>
             <rect key="screenRect" x="0.0" y="0.0" width="1920" height="1058"/>
             <view key="contentView" id="EiT-Mj-1SZ">
-                <rect key="frame" x="0.0" y="0.0" width="480" height="132"/>
+                <rect key="frame" x="0.0" y="0.0" width="480" height="193"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <textField verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="c2L-yR-K1n">
-                        <rect key="frame" x="20" y="90" width="423" height="22"/>
+                    <textField verticalHuggingPriority="750" id="c2L-yR-K1n">
+                        <rect key="frame" x="20" y="151" width="423" height="22"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                         <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" state="on" borderStyle="bezel" placeholderString="Enter a YouTube URL Here" drawsBackground="YES" id="GyE-v0-naE">
                             <font key="font" metaFont="system"/>
@@ -686,10 +694,10 @@
                             <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
                         </textFieldCell>
                     </textField>
-                    <button verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="rX4-TT-6WZ">
-                        <rect key="frame" x="161" y="49" width="141" height="32"/>
+                    <button verticalHuggingPriority="750" id="rX4-TT-6WZ">
+                        <rect key="frame" x="161" y="110" width="143" height="32"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
-                        <buttonCell key="cell" type="push" title="Extract Video ID" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="LdL-Cw-BeA">
+                        <buttonCell key="cell" type="push" title="Fetch Video Info" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="LdL-Cw-BeA">
                             <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                             <font key="font" metaFont="system"/>
                         </buttonCell>
@@ -697,10 +705,69 @@
                             <action selector="extractAction:" target="Voe-Tx-rLC" id="zre-eO-Kxe"/>
                         </connections>
                     </button>
-                    <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="7q3-m0-8iU">
-                        <rect key="frame" x="167" y="20" width="278" height="17"/>
+                    <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" id="7q3-m0-8iU">
+                        <rect key="frame" x="167" y="81" width="278" height="17"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                         <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" id="yXl-OX-R9w">
+                            <font key="font" metaFont="system"/>
+                            <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
+                            <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
+                        </textFieldCell>
+                    </textField>
+                    <imageView horizontalHuggingPriority="251" verticalHuggingPriority="251" id="gL0-Bj-GB4">
+                        <rect key="frame" x="20" y="40" width="71" height="69"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+                        <imageCell key="cell" refusesFirstResponder="YES" alignment="left" imageScaling="proportionallyDown" id="iJi-rS-HQH"/>
+                    </imageView>
+                    <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" id="lzx-t2-ww7">
+                        <rect key="frame" x="101" y="92" width="363" height="17"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+                        <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" id="jX5-6o-V2g">
+                            <font key="font" size="13" name="ArialHebrew-Bold"/>
+                            <color key="textColor" red="0.0" green="0.0" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                            <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
+                        </textFieldCell>
+                    </textField>
+                    <textField verticalHuggingPriority="750" horizontalCompressionResistancePriority="250" setsMaxLayoutWidthAtFirstLayout="YES" id="8AD-ho-fA8">
+                        <rect key="frame" x="101" y="40" width="361" height="51"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+                        <textFieldCell key="cell" sendsActionOnEndEditing="YES" id="GTW-iY-ZX2">
+                            <font key="font" metaFont="system"/>
+                            <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
+                            <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
+                        </textFieldCell>
+                    </textField>
+                    <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" id="B8E-J6-8E4">
+                        <rect key="frame" x="113" y="20" width="149" height="17"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+                        <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" id="w6W-06-Vef">
+                            <font key="font" metaFont="system"/>
+                            <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
+                            <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
+                        </textFieldCell>
+                    </textField>
+                    <levelIndicator verticalHuggingPriority="750" id="s2z-81-HWs">
+                        <rect key="frame" x="243" y="22" width="96" height="13"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+                        <levelIndicatorCell key="cell" alignment="left" doubleValue="-1" maxValue="5" warningValue="2" criticalValue="2" levelIndicatorStyle="rating" id="ngf-Y4-8Z7"/>
+                    </levelIndicator>
+                    <progressIndicator hidden="YES" horizontalHuggingPriority="750" verticalHuggingPriority="750" maxValue="100" displayedWhenStopped="NO" bezeled="NO" indeterminate="YES" controlSize="small" style="spinning" id="m03-GL-62o">
+                        <rect key="frame" x="311" y="119" width="16" height="16"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+                    </progressIndicator>
+                    <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" id="sTV-ss-9h5">
+                        <rect key="frame" x="18" y="20" width="101" height="17"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+                        <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" id="CyD-Xc-iqa">
+                            <font key="font" metaFont="system"/>
+                            <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
+                            <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
+                        </textFieldCell>
+                    </textField>
+                    <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" id="tEq-wV-CSB">
+                        <rect key="frame" x="345" y="20" width="110" height="17"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+                        <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" id="EMc-oO-JHm">
                             <font key="font" metaFont="system"/>
                             <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
                             <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
